feat: working push notifications
